# Sahay-Voice-First-Digital-Navigator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
app/: config.py  main.py  orchestrator.py
app/browser_agent/: __init__.py  action_executor.py  agent.py  playwright_computer.py  safety_gate.py  self_healer.py
app/planner_agent/: __init__.py  agent.py  plan_schema.py
app/services/: __init__.py  entity_extractor.py  firestore_service.py  guardian_service.py  screenshot_diff.py  task_journal.py  task_templates.py  upi_service.py  workflow_orchestrator.py  workflow_recorder.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js  audio-processor.js  screen-viewer.js
app/voice_agent/: __init__.py  agent.py  intent_parser.py
deploy/: deploy.sh
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: architecture.md  demo-script.md
tests/: test_browser_agent.py  test_safety_gate.py  test_task_journal.py  test_voice_agent.py
